update repo url

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "build": "tsc"
   },
+  "repository": {
+    "url": "https://github.com/asinner/ordered-map-arrays"
+  },
   "author": "Andrew Sinner <andrewsinner@gmail.com>",
   "license": "MIT",
   "devDependencies": {
